Making the gutter between to areas parametrized

--- a/use_sample.html
+++ b/use_sample.html
@@ -73,7 +73,8 @@
       },
       mouseenter: function (node, box) {
         $('#data-box').html('<p>Label: ' + node.label + '</p><p>Data:' + node.data + '</p><p>Value:' + node.value + '</p>');
-      }
+      },
+      itemMargin: 2
       });
     </script>
   </body>
