cleanup some dead code

--- a/use_sample.html
+++ b/use_sample.html
@@ -36,7 +36,7 @@
     <div id='data-box'></div>
 
     <script src='http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js'></script>
-    <script src='jquery-treemap.js'></script>
+    <script src='src/jquery-treemap.js'></script>
     <script>
       $('div#my-treemap').treemap([
       {
